显示用户管理页面数据表格

--- a/oademo/pom.xml
+++ b/oademo/pom.xml
@@ -134,13 +134,13 @@
             </plugin>
 
         </plugins>
-        <resources>
-            <resource>
-                <includes>
-                    <include>static/**</include>
-                </includes>
-            </resource>
-        </resources>
+<!--        <resources>-->
+<!--            <resource>-->
+<!--                <includes>-->
+<!--                    <include>static/**</include>-->
+<!--                </includes>-->
+<!--            </resource>-->
+<!--        </resources>-->
 
     </build>
 
